feat: them component Hoc van hien thi thong tin hoc tap cua Phuc Lee

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 // Trang chủ giới thiệu về Phúc Lee
 import Layout from '../components/common/Layout.astro';
 import Projects from '../components/common/Projects.astro';
+import Education from '../components/common/Education.astro';
 ---
 
 <Layout title="Phúc Lee - Korean Learner & Content Creator" description="Phúc Lee - Người đam mê ngôn ngữ, ghi lại hành trình học tiếng Hàn">
@@ -14,6 +15,7 @@ import Projects from '../components/common/Projects.astro';
   </div>
   
   <Projects />
+  <Education />
 </Layout>
 
 <style>
