feat: them component Kinh nghiem hien thi thong tin lam viec cua Phuc Lee

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@
 import Layout from '../components/common/Layout.astro';
 import Projects from '../components/Home/Projects.astro';
 import Education from '../components/Home/Education.astro';
+import Experience from '../components/Home/Experience.astro';
 ---
 
 <Layout title="Phúc Lee - Korean Learner & Content Creator" description="Phúc Lee - Người đam mê ngôn ngữ, ghi lại hành trình học tiếng Hàn">
@@ -16,6 +17,7 @@ import Education from '../components/Home/Education.astro';
   
   <Projects />
   <Education />
+  <Experience />
 </Layout>
 
 <style>
