--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,8 @@ import PostPreview from '../components/Blog/PostPreview.astro';
           title="Thái Cực Tượng Đồ của nước Việt Nam trong kỷ nguyên mới"
           description="Phân tích sâu về đồ hình Thái Cực Tượng Đồ và những dự đoán về thời vận của Việt Nam trong kỷ nguyên mới dựa trên triết lý phương Đông."
           slug="thai-cuc-tuong-do-viet-nam"
+          source="https://www.facebook.com/photo/?fbid=286472075171946&set=a.278626265956527"
+          sourceTitle="Facebook Post"
         />
         
         <PostPreview 
